getting openapi up to date
